maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:11: error: ':' expected but ',' found.
def choix(x,y) {
           ^JediEscaper:59: error: identifier expected but '}' found.
}
^